<resources>
    <string name="app_name">Midterm 07590555</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="login_to_facebook">Login To Facebook</string>
    <string name="add_to_story">Add to Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>

</resources>
