<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/Username"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Username"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/logintofacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_facebook"
        android:textColor="#4368B3"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        app:layout_constraintEnd_toEndOf="@+id/facebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="142dp"
        android:layout_height="125dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/logintofacebook"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_facebook" />
</androidx.constraintlayout.widget.ConstraintLayout>